--- a/tours/index.html
+++ b/tours/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nature Tours | Home</title>
     <!--Ion Icons-->
@@ -14,8 +14,62 @@
     <!--Our own stylesheet-->
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
+    <header>
+        <div class="container">
+            <nav>
+                <div class="nav-brand">
+                    <a href="">
+                        <img src="images/logo.png" alt="">
+                    </a>
+
+                    <div class="menu-icons open">
+                        <i class="icon ion-md-menu"></i>
+                    </div>
+
+                    <ul class="nav-list">
+                        <div class="menu-icons close">
+                            <i class="icon ion-md-close"></i>
+                        </div>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Destinations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Booking</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <section class="hero">
+        <div class="container">
+            <div class="main-message">
+                <h3>The great outdoors</h3>
+                <h1>Adventure</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam eius sed saepe dolor dicta exercitationem doloremque quisquam nisi cumque blanditiis, officia, ipsa maxime suscipit corporis aspernatur nobis consequatur at cupiditate.
+                </p>
+                <div class="cta">
+                    <a href="" class="btn">Book now</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script type="text/javascript" src="scripts.js"></script>
 </body>
+
 </html>
